public/css/siteaday.css
html, body {
    background-color: #fff;
    height: 100%;
}

.name {
    font-size: 3.1em;
    font-weight: bold;
    text-align: center;
    text-shadow: 1px 1px 1px #444;
}

.text-white {
    color: #fff;
}

.sidebar {
    position: fixed;
    height: 100%;
    color: #F65555;
    font-family: 'Source Sans Pro', sans-serif;
    box-shadow: 1px 1px 5px #555;
    background-image: url('../img/paris2.png');
}

.sidebar-content {
    background-color: rgba(255,255,255,.7);
    border-radius: 10px;
    text-align: center;
}
  
.page {
    height: 100%;
}

.post {
    border-top: 1px solid #dbdbdb; 
    /*border-bottom: 1px solid #dbdbdb; */
    padding: 0 20px 10px 20px;
}

.posts {
    padding: 5% 10%;
}

.post-title {
    font-size: 2.2em;
    font-weight: bold;
}

.project {
    font-size: 1.3em;   
    font-weight: bold;

}

.project > a {
    color: #F65555;
}

ul {
    list-style: none;
    padding-left: 0;
}

.quote {
    color: #000;
}

@media(max-width: 768px) {
    .name {
        font-size: 4em;
    }
    .sidebar {
    background-image: url('../img/paris.png');
    height: 700px;
    }
}

